--- a/site.yml
+++ b/site.yml
@@ -2,8 +2,8 @@ runtime:
   cache_dir: ./.cache/antora
 
 site:
-  title: Template Tutorial
-  url: https://redhat-scholars.github.io/course-template
+  title: Jordi Template
+  url: https://jordi-template
   start_page: template-tutorial::index.adoc
 
 content:
